--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         }
 
         .container h1 {
-            color: #00790a;
+            color: red;
         }
 
         .rate {
             font-size: 1.5em;
             margin: 10px 0;
-            color: #00790a;
+            color: red;
         }
 
         .timestamp {
