--- a/index.html
+++ b/index.html
@@ -13,31 +13,32 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: black;
+            background-color: #f4f4f9; /* Cor de fundo suave */
         }
 
         .container {
             text-align: center;
-            background-color: gray;
+            background-color: #ffffff; /* Fundo branco */
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             max-width: 400px;
         }
 
         .container h1 {
-            color: red;
+            color: #4b6e6f; /* Tom verde suave */
+            font-size: 1.8em;
         }
 
-        .rate {
-            font-size: 1.5em;
+        .rate, .timestamp {
+            font-size: 1.1em;
             margin: 10px 0;
-            color: red;
+            color: #333333; /* Cor escura para texto */
         }
 
         .timestamp {
             font-size: 0.9em;
-            color: #000000;
+            color: #999999; /* Cor mais suave para a data/hora */
         }
 
         input {
@@ -47,32 +48,54 @@
             width: calc(100% - 24px);
             box-sizing: border-box;
             border-radius: 5px;
-            border: 1px solid #eea1a1;
+            border: 1px solid #c1c1c1;
+            background-color: #f9f9f9;
         }
 
         button {
-            padding: 10px 20px;
-            background-color: #14a86a;
-            color: rgb(255, 255, 255);
+            padding: 12px 20px;
+            background-color: #4b6e6f; /* Verde suave */
+            color: #ffffff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
             margin-top: 10px;
             width: 100%;
+            transition: background-color 0.3s;
         }
 
         button:hover {
-            background-color: #097548;
+            background-color: #2d4f4d; /* Tom mais escuro no hover */
         }
 
         select {
-            padding: 10px;
+            padding: 12px;
             font-size: 16px;
             margin-top: 10px;
             width: calc(100% - 24px);
             box-sizing: border-box;
             border-radius: 5px;
+            border: 1px solid #c1c1c1;
+            background-color: #f9f9f9;
+        }
+
+        .rate {
+            color: #2d4f4d; /* Cor para o texto da cotação */
+            font-weight: bold;
+        }
+
+        #resultado {
+            color: #4b6e6f;
+            font-size: 1.2em;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+
+        button:focus, input:focus, select:focus {
+            outline: none;
+            border-color: #4b6e6f;
+            box-shadow: 0 0 5px rgba(75, 110, 111, 0.3);
         }
     </style>
 </head>
